trunk (19/11/2010)
	Core
		? Fix bad package


version 0.1.26 (11/11/2010). svn r38
	Core
		? Fix bad package
		Fix segfault
		Fix Email notify
		Russian translation fix
	Roster
		User info 
		Search&Add Contacts
		Fix remove group issue
	Messages
		Fix segfault (at sending unicode-specific symbols)
		Fix html-formated text recieving
	
version 0.1.24 (1/09/2010)
	Core
		support pidgin 2.3.1+
	Roster
		fix 0.1.23 regressions

version 0.1.23 (29/08/2010)
	Core
		downgrade to protocol v 1.9
	Roster
		fix remove buddy issue
		fix authorize buddy issue
	Other
		Links "Set user info" and "Set avatar"

version 0.1-r22 (25/08/2010):
	Roster
		Group deletion fix (segfault)
		Add + Modify phones
		fix mrim_add_buddy bug(wrong pq->seq)
	Account
		? Fix a crash on disconnect
	Messages
		Now, maximum mesage size is 65Kb. (1kb before)
		Free SMS