@@ -1,6 +1,8 @@
-trunk (19/11/2010)
+trunk (17/12/2010)
 	Core
 		? Fix bad package
+	Roster
+		Fix offline auth
 
 
 version 0.1.26 (11/11/2010). svn r38
